Version 0.1.1:
- Re-add doxygen documentation for inlinable functions.

Version 0.1.0:
- Gnulib update.
- CVL: Use filter separation for the min and max filters to improve
  performance.
- cvtool: Added the wallis subcommand to the filter command.
- CVL: Aded cvl_filter_wallis() and cvl_filter3d_wallis().
- Add "extern inline" functions to the corresponding .c files so that the
  symbols are always in the library.
- CVL, cvtool: Renamed "average" to "mean" where appropriate.
- Removed the notgnulib module c99math, because the functions fmin, fmax, and 
  lround are now used in the public header file cvl_math.h, which cannot include
  c99math.h. If these functions are still missing on a relevant platform, I'll
  look into this again.
- CVL: Reorganization:
  - Move inline functions to header files (with "extern inline").
  - Remove cvl.c, and compile the modules one by one, as it should be.
- CVL: remove cvl.pc (pkg-config file) and the cvl-config.script. Provide
  a new cvl.m4 file with a AM_LIBCVL macro that is based on
  AC_LIB_HAVE_LINKFLAGS.
- Improvements for the build system:
  - Quote arguments of M4 macros.
  - Use AC_LIB_HAVE_LINKFLAGS to detect libraries. Do not use *-config scripts
    or pkg-config. This avoids problems that are reported in this thread:
    http://thread.gmane.org/gmane.comp.encryption.gpg.gnutls.devel/
    1610/focus=1610 .
- CVL: Various cleanups, minor fixes, and additional cvl_assert() calls.
- CVL: Fix for cvl_skeleton3d(), memory savings for cvl_skeleton() and 
  cvl_skeleton3d().
- CVL: Add functions cvl_field_array() and cvl_field_const_array() to access 
  the raw array data of a field.
- Minor documentation improvements.

Version 0.0.3:
- Gnulib update.
- CVL: Remove cvl_field_ref*() functions.
- CVL: Switched optical flow functions from double to float.
- CVL: Switched color functions from double to float.
- CVL: Switched vector functions from double to float.